--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="/">Studio</a></li>
@@ -16,11 +16,13 @@
           <li><a href="/">Contacts</a></li>
         </ul>
       </nav>
-      <a href=""></a>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -68,7 +70,7 @@
         <ul>
           <li>
             <img
-              src="images/mark.jpg"
+              src="./images/mark.jpg"
               alt="Mark Guerrero's photo"
               width="264"
               height="260"
@@ -78,7 +80,7 @@
           </li>
           <li>
             <img
-              src="images/tom.jpg"
+              src="./images/tom.jpg"
               alt="Tom Ford's photo"
               width="264"
               height="260"
@@ -88,7 +90,7 @@
           </li>
           <li>
             <img
-              src="images/camilla.jpg"
+              src="./images/camilla.jpg"
               alt="Camila Garcia's photo"
               width="264"
               height="260"
@@ -98,7 +100,7 @@
           </li>
           <li>
             <img
-              src="images/daniel.jpg"
+              src="./images/daniel.jpg"
               alt="Daniel Wilson's photo"
               width="264"
               height="260"
@@ -111,7 +113,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
